Name:                number-six
Version:             0.1
Synopsis:            A sexy IRC bot library
License-file:        LICENSE
Author:              Jasper Van der Jeugt
Maintainer:          jaspervdj@gmail.com
Stability:           Experimental
Category:            Network
Build-type:          Simple
Cabal-version:       >= 1.2

Library
  Ghc-Options:       -Wall
  Exposed-Modules:   NumberSix.Bang
                     NumberSix.Handlers.AutoVoice
                     NumberSix.Handlers.Binary
                     NumberSix.Handlers.Bomb
                     NumberSix.Handlers.Cubits
                     NumberSix.Handlers.Down
                     NumberSix.Handlers.EightBall
                     NumberSix.Handlers.GitHub
                     NumberSix.Handlers.Gods
                     NumberSix.Handlers.Google
                     NumberSix.Handlers.HackerNews
                     NumberSix.Handlers.Hello
                     NumberSix.Handlers.Help
                     NumberSix.Handlers
                     NumberSix.Handlers.Identify
                     NumberSix.Handlers.LastFm
                     NumberSix.Handlers.NowPlaying
                     NumberSix.Handlers.Op
                     NumberSix.Handlers.Ping
                     NumberSix.Handlers.Quote
                     NumberSix.Handlers.Reddit
                     NumberSix.Handlers.Rejoin
                     NumberSix.Handlers.Say
                     NumberSix.Handlers.Seen
                     NumberSix.Handlers.Shorten
                     NumberSix.Handlers.Slap
                     NumberSix.Handlers.Sup
                     NumberSix.Handlers.Tell
                     NumberSix.Handlers.Title
                     NumberSix.Handlers.TryHaskell
                     NumberSix.Handlers.Tumblr
                     NumberSix.Handlers.Twitter
                     NumberSix.Handlers.UrbanDictionary
                     NumberSix
                     NumberSix.Irc
                     NumberSix.IrcString
                     NumberSix.Message.Decode
                     NumberSix.Message.Encode
                     NumberSix.Message
                     NumberSix.Util.BitLy
                     NumberSix.Util
                     NumberSix.Util.Http
                     NumberSix.Util.Redis
                     NumberSix.Util.Time
  Build-depends:     base >= 4 && < 5,
                     mtl >= 2 && < 3,
                     random >= 1,
                     containers >= 0.3,
                     bytestring >= 0.9,
                     utf8-string >= 0.3.6,
                     redis >= 0.7,
                     redis-simple >= 0.1,
                     binary >= 0.5,
                     tagsoup >= 0.10,
                     time >= 1,
                     dataenc >= 0.13,
                     network >= 2.3,
                     json >= 0.4,
                     attoparsec >= 0.8,
                     deepseq >= 1.0,
                     curl >= 1.3
