Name:          number-six
Version:       0.1
Synopsis:      A sexy IRC bot library
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Stability:     Experimental
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.2

Library
  Ghc-Options:       -Wall
  Hs-source-dirs:    src

  Exposed-Modules:
    NumberSix,
    NumberSix.Application,
    NumberSix.Bang,
    NumberSix.ExponentialBackoff,
    NumberSix.Handlers,
    NumberSix.Handlers.Binary,
    NumberSix.Handlers.Bomb,
    NumberSix.Handlers.Down,
    NumberSix.Handlers.EightBall,
    NumberSix.Handlers.GitHub,
    NumberSix.Handlers.Gods,
    NumberSix.Handlers.Google,
    NumberSix.Handlers.HackerNews,
    NumberSix.Handlers.Hello,
    NumberSix.Handlers.Help,
    NumberSix.Handlers.Identify,
    NumberSix.Handlers.Join,
    NumberSix.Handlers.LastFm,
    NumberSix.Handlers.Meme,
    NumberSix.Handlers.NickServ,
    NumberSix.Handlers.NowPlaying,
    NumberSix.Handlers.Op,
    NumberSix.Handlers.Pick,
    NumberSix.Handlers.Ping,
    NumberSix.Handlers.Quote,
    NumberSix.Handlers.Reddit,
    NumberSix.Handlers.Resto,
    NumberSix.Handlers.Say,
    NumberSix.Handlers.Seen,
    NumberSix.Handlers.Shorten,
    NumberSix.Handlers.Slap,
    NumberSix.Handlers.Sup,
    NumberSix.Handlers.Tell,
    NumberSix.Handlers.Title,
    NumberSix.Handlers.Topic,
    NumberSix.Handlers.TryHaskell,
    NumberSix.Handlers.Tumblr,
    NumberSix.Handlers.Twitter,
    NumberSix.Handlers.UrbanDictionary,
    NumberSix.Handlers.Voice,
    NumberSix.Handlers.Wikipedia,
    NumberSix.Handlers.YouTube,
    NumberSix.Irc,
    NumberSix.Logger,
    NumberSix.Message,
    NumberSix.Message.Decode,
    NumberSix.Message.Encode,
    NumberSix.SandBox,
    NumberSix.Util,
    NumberSix.Util.BitLy,
    NumberSix.Util.Http,
    NumberSix.Util.Mode,
    NumberSix.Util.Sql,
    NumberSix.Util.Time

  Build-depends:
    HDBC                 >= 2.2  && < 2.4,
    HDBC-postgresql      >= 2.2  && < 2.4,
    aeson                >= 0.5  && < 0.7,
    attoparsec           >= 0.8  && < 0.11,
    base                 >= 4    && < 5,
    binary               >= 0.5  && < 0.6,
    bytestring           >= 0.9  && < 0.10,
    containers           >= 0.3  && < 0.6,
    curl                 >= 1.3  && < 1.4,
    dataenc              >= 0.13 && < 0.15,
    deepseq              >= 1.0  && < 1.4,
    mtl                  >= 2    && < 2.1,
    network              >= 2.3  && < 2.4,
    old-locale           >= 1.0  && < 1.1,
    random               >= 1.0  && < 1.1,
    regex-pcre           >= 0.94 && < 0.95,
    tagsoup              >= 0.10 && < 0.13,
    text                 >= 0.10 && < 0.12,
    time                 >= 1.0  && < 1.5,
    unordered-containers >= 0.1  && < 0.3,
    utf8-string          >= 0.3  && < 0.4,
    vector               >= 0.7  && < 0.10
