Name:          number-six
Version:       0.1
Synopsis:      A sexy IRC bot library
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Stability:     Experimental
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.2

Library
  Ghc-Options:       -Wall
  Hs-source-dirs:    src

  Exposed-Modules:
    NumberSix,
    NumberSix.Application,
    NumberSix.Bang,
    NumberSix.Handlers,
    NumberSix.Handlers.Binary,
    NumberSix.Handlers.Bomb,
    NumberSix.Handlers.EightBall,
    NumberSix.Handlers.GitHub,
    NumberSix.Handlers.Gods,
    NumberSix.Handlers.Google,
    NumberSix.Handlers.HackerNews,
    NumberSix.Handlers.Hello,
    NumberSix.Handlers.Help,
    NumberSix.Handlers.Http,
    NumberSix.Handlers.Identify,
    NumberSix.Handlers.Imdb,
    NumberSix.Handlers.Insult,
    NumberSix.Handlers.Join,
    NumberSix.Handlers.LastFm,
    NumberSix.Handlers.NickServ,
    NumberSix.Handlers.NowPlaying,
    NumberSix.Handlers.Op,
    NumberSix.Handlers.Pick,
    NumberSix.Handlers.Ping,
    NumberSix.Handlers.Quote,
    NumberSix.Handlers.Reddit,
    NumberSix.Handlers.Remind,
    NumberSix.Handlers.Resto,
    NumberSix.Handlers.RotatingLogger,
    NumberSix.Handlers.Rr,
    NumberSix.Handlers.Say,
    NumberSix.Handlers.Seen,
    NumberSix.Handlers.Shorten,
    NumberSix.Handlers.Sup,
    NumberSix.Handlers.Tell,
    NumberSix.Handlers.Topic,
    NumberSix.Handlers.TryHaskell,
    NumberSix.Handlers.TryRuby,
    NumberSix.Handlers.Tumblr,
    NumberSix.Handlers.Twitter,
    NumberSix.Handlers.UrbanDictionary,
    NumberSix.Handlers.Voice,
    NumberSix.Handlers.Weather,
    NumberSix.Handlers.Wikipedia,
    NumberSix.Handlers.YouTube,
    NumberSix.Irc,
    NumberSix.Logger,
    NumberSix.Message,
    NumberSix.Message.Decode,
    NumberSix.Message.Encode,
    NumberSix.SandBox,
    NumberSix.Util,
    NumberSix.Util.BitLy,
    NumberSix.Util.Error,
    NumberSix.Util.Http,
    NumberSix.Util.Irc,
    NumberSix.Util.Sql,
    NumberSix.Util.Time

  Build-depends:
    HDBC                 >= 2.2  && < 2.4,
    HDBC-postgresql      >= 2.2  && < 2.4,
    aeson                >= 0.5  && < 0.7,
    attoparsec           >= 0.8  && < 0.11,
    base                 >= 4    && < 5,
    bytestring           >= 0.9  && < 0.11,
    containers           >= 0.3  && < 0.6,
    dataenc              >= 0.13 && < 0.15,
    deepseq              >= 1.0  && < 1.4,
    directory            >= 1.0,
    filepath             >= 1.3,
    http-conduit         >= 1.9  && < 1.10,
    http-types           >= 0.6  && < 0.9,
    mtl                  >= 2    && < 2.2,
    network              >= 2.3  && < 2.5,
    old-locale           >= 1.0  && < 1.1,
    random               >= 1.0  && < 1.1,
    text                 >= 0.10 && < 0.12,
    time                 >= 1.0  && < 1.5,
    unordered-containers >= 0.1  && < 0.3,
    vector               >= 0.7  && < 0.11,
    xmlhtml              >= 0.1  && < 0.3

Test-suite number-six-tests
  Ghc-options:    -Wall -fwarn-tabs
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.9,
    test-framework-hunit >= 0.2 && < 0.4,
    -- Copied from regular dependencies...
    HDBC                 >= 2.2  && < 2.4,
    HDBC-postgresql      >= 2.2  && < 2.4,
    aeson                >= 0.5  && < 0.7,
    attoparsec           >= 0.8  && < 0.11,
    base                 >= 4    && < 5,
    bytestring           >= 0.9  && < 0.11,
    containers           >= 0.3  && < 0.6,
    dataenc              >= 0.13 && < 0.15,
    deepseq              >= 1.0  && < 1.4,
    directory            >= 1.0,
    filepath             >= 1.3,
    http-conduit         >= 1.9  && < 1.10,
    http-types           >= 0.6  && < 0.9,
    mtl                  >= 2    && < 2.2,
    network              >= 2.3  && < 2.5,
    old-locale           >= 1.0  && < 1.1,
    random               >= 1.0  && < 1.1,
    text                 >= 0.10 && < 0.12,
    time                 >= 1.0  && < 1.5,
    unordered-containers >= 0.1  && < 0.3,
    vector               >= 0.7  && < 0.11,
    xmlhtml              >= 0.1  && < 0.3
